--- a/Contacto.html
+++ b/Contacto.html
@@ -24,7 +24,7 @@
         <div class="container">
             <div class="textos">
                 <h1>Comunicate con nosotros a través de:</h1>
-                <h2>clanakwebmasters@gmail.com</h2>
+                <h2>clanakwebmasters2@gmail.com</h2>
             </div>
             <img src="img/Clanak Web logo.png" alt="">
         </div>
